--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cache-storage",
 	"description": "Cache storage for node js",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"author": {
 		"name": "David Kudera",
 		"email": "sakren@gmail.com"
@@ -20,6 +20,7 @@
 	},
 	"main": "./lib/Cache.js",
 	"dependencies": {
-		"moment": "2.1.0"
+		"moment": "2.1.0",
+		"crypto-browserify": "0.2.3"
 	}
 }
