--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cache-storage",
 	"description": "Cache storage for node js",
-	"version": "1.1.0",
+	"version": "1.1.1",
 	"author": {
 		"name": "David Kudera",
 		"email": "sakren@gmail.com"
@@ -13,7 +13,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:sakren/cache-storage.git"
+		"url": "git@github.com:sakren/node-cache-storage.git"
 	},
 	"engines": {
 		"node": "*"
