--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cache-storage",
 	"description": "Cache storage for node js",
-	"version": "1.1.2",
+	"version": "1.2.0",
 	"author": {
 		"name": "David Kudera",
 		"email": "sakren@gmail.com"
@@ -22,5 +22,11 @@
 	"main": "./lib/Cache.js",
 	"dependencies": {
 		"moment": "2.1.0"
+	},
+	"devDependencies": {
+		"should": "1.2.2"
+	},
+	"scripts": {
+		"test": "cd ./test; mocha ./index.js --reporter spec;"
 	}
 }
