--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cache-storage",
 	"description": "Advanced cache storage for node js",
-	"version": "1.4.0",
+	"version": "1.4.1",
 	"author": {
 		"name": "David Kudera",
 		"email": "sakren@gmail.com"
@@ -29,6 +29,6 @@
 		"chai": "latest"
 	},
 	"scripts": {
-		"test": "cd ./test; echo \"Testing in node:\"; mocha ./node/index.js --reporter spec; cd ./browser; echo \"Testing in browser:\"; mocha-phantomjs ./index.html;"
+		"test": "cd ./test; echo \"Testing in node:\"; mocha ./node/index.js --reporter spec; cd ./browser; echo \"Testing in browser:\"; simq build; mocha-phantomjs ./index.html;"
 	}
 }
