--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"chai": "~1.8.1",
 		"mocha": "~1.17.0",
 		"mocha-phantomjs": "~3.3.1",
-		"phantomjs": "1.9.2-6"
+		"phantomjs": "~1.9.2-6",
+		"fs-mock": "~1.0.1"
 	},
 	"scripts": {
 		"test": "npm run test-node && npm run test-browser",
