--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 	},
 	"main": "./lib/Cache.js",
 	"dependencies": {
-		"moment": "~2.5.0"
+		"moment": "~2.5.0",
+		"async": "~0.2.9"
 	},
 	"devDependencies": {
 		"chai": "~1.8.1",
@@ -33,8 +34,8 @@
 	},
 	"scripts": {
 		"test": "npm run test-node && npm run test-browser",
-		"build-and-test": "npm run test-build && npm run test",
-		"test-build": "cd ./test/browser; simq build;",
+		"build-and-test": "npm run build-tests && npm run test",
+		"build-tests": "coffee -co ./test/node/lib ./test/node/src; cd ./test/browser; simq build;",
 		"test-node": "mocha ./test/node/index.js --reporter spec",
 		"test-browser": "mocha-phantomjs ./test/browser/index.html"
 	}
