--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 	"main": "./lib/Cache.js",
 	"dependencies": {
 		"moment": "~2.5.0",
-		"async": "~0.2.9"
+		"async": "~0.2.9",
+		"redis": "~0.10.0"
 	},
 	"devDependencies": {
 		"chai": "~1.8.1",
