--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "cache-storage",
-	"description": "Advanced cache storage for node js",
-	"version": "2.0.0",
+	"description": "[ABANDONED] Advanced cache storage for node js",
+	"version": "2.0.1",
 	"author": {
 		"name": "David Kudera",
-		"email": "sakren@gmail.com"
+		"email": "kudera.d@gmail.com"
 	},
 	"keywords": [
 		"cache",
@@ -14,7 +14,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:sakren/node-cache-storage.git"
+		"url": "git@github.com:Carrooi/Node-CacheStorage.git"
 	},
 	"license": "MIT",
 	"engines": {
@@ -41,3 +41,4 @@
 		"test-browser": "mocha-phantomjs ./test/browser/index.html"
 	}
 }
+
